Fix a layout bug in the minified HTML

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -17,7 +17,7 @@ article {
   li {
     display: inline-block;
     &:not(:first-child)::before {
-      content: " · ";
+      content: "\0000a0· ";
     }
   }
 }
